--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <div class="container">
                                     <div class="row justify-content-center">
                                         <div class="col-xl-6 col-lg-7 col-sm-10">
-                                            <h2 class="carousel-title">Parque abierto ya al pública</h2>
+                                            <h2 class="carousel-title">Parque abierto ya al público</h2>
                                             <ul class="carousel-btn rounded-buttons">
                                                 <li><a class="main-btn rounded-three" href="#">Reservar</a></li>
                                                 
@@ -321,7 +321,7 @@
                         </div>
                         <div class="portfolio-text">
                             <h4 class="portfolio-title"><a href="#">Camino Norte </a></h4>
-                            <p class="text">Camino por la entrada mas ancha de nuestro parque</p>
+                            <p class="text">Camino por la entrada más ancha de nuestro parque</p>
                         </div>
                     </div> <!-- single portfolio -->
                 </div>
@@ -342,7 +342,7 @@
                         </div>
                         <div class="portfolio-text">
                             <h4 class="portfolio-title"><a href="#">Camino Sur</a></h4>
-                            <p class="text">Camino por la entrada mas estrecha de nuestro parque</p>
+                            <p class="text">Camino por la entrada más estrecha de nuestro parque</p>
                         </div>
                     </div> <!-- single portfolio -->
                 </div>
@@ -636,7 +636,7 @@ Actualmente se puede visitar haciendo una reservación vía telefónica para rea
                             <ul>
                                 <li><a href="#">Centro de apoyo</a></li>
                                 <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Terminos y Condiciones</a></li>
+                                <li><a href="#">Términos y Condiciones</a></li>
                             </ul>
                         </div> <!-- footer link -->
                     </div>
