--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <li><a href="#">Reapertura</a></li>
                     <li><a href="#">Galería</a></li>
                     <li><a href="#">Opiniones</a></li>
-                    <li><a href="#">Resrvaciones</a></li>
+                    <li><a href="#">Reservaciones</a></li>
                 </ul>
             </div> <!-- menu -->
             <div class="sidebar-social d-flex align-items-center justify-content-center">
